--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-spring.application.name=flakkee-verhuizers-api
+spring.application.name=template
 
 # MySQL
 spring.datasource.url=jdbc:mysql://flakkee-verhuizers-mysql:3306/flakkee-verhuizers
@@ -12,9 +12,9 @@ spring.jpa.hibernate.ddl-auto=validate
 # OpenAPI config
 springdoc.swagger-ui.enabled=false
 springdoc.api-docs.enabled=false
-springdoc.api-docs.path=/swagger/flakkee-verhuizers
+springdoc.api-docs.path=/swagger/template
 springdoc.swagger-ui.path=/swagger/ui
-springdoc.swagger-ui.url=/swagger/flakkee-verhuizers.yaml
+springdoc.swagger-ui.url=/swagger/template.yaml
 springdoc.pathsToMatch=/**
 springdoc.writer-with-order-by-keys=true
 springdoc.writer-with-default-pretty-printer=true
