--- a/build.gradle
+++ b/build.gradle
@@ -49,9 +49,11 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.11'
 	implementation 'org.openapitools:jackson-databind-nullable:0.2.3'
 
-	// MySQL
+	// JPA
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+
+	// MySQL
 	implementation 'mysql:mysql-connector-java:8.0.28'
 
 	// Redis
