--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 spring.application.name=template
 
 # MySQL
-spring.datasource.url=jdbc:mysql://flakkee-verhuizers-mysql:3306/flakkee-verhuizers
+spring.datasource.url=jdbc:DBTYPE://DBHOST:3306/DBNAME
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -21,13 +21,13 @@ springdoc.writer-with-default-pretty-printer=true
 springdoc.model-converters.pageable-converter.enabled=false
 
 # Redis
-spring.redis.host=localhost
-spring.redis.port=6379
-spring.redis.timeout=60
-spring.redis.jedis.pool.max-idle=8
-spring.redis.jedis.pool.min-idle=0
-spring.redis.jedis.pool.max-active=8
-spring.redis.jedis.pool.max-wait=-1
+spring.redis.host=REDISHOST
+spring.redis.port=REDISPORT
+spring.redis.timeout=REDISTIMEOUT
+spring.redis.jedis.pool.max-idle=REDISMAXIDLE
+spring.redis.jedis.pool.min-idle=REDISMINIDLE
+spring.redis.jedis.pool.max-active=REDISMAXACTIVE
+spring.redis.jedis.pool.max-wait=REDISMAXWAIT
 spring.redis.password=
 
 
