--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,10 @@ spring.application.name=template
 
 # MySQL
 spring.datasource.url=jdbc:DBTYPE://DBHOST:3306/DBNAME
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.username=DBUSER
+spring.datasource.password=DBPW
+spring.datasource.driver-class-name=DBDRIVER
+spring.jpa.database-platform=DBPLATFORM
 spring.jpa.hibernate.ddl-auto=validate
 
 # OpenAPI config
