--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 spring.application.name=template
-
+#
 # MySQL
 spring.datasource.url=jdbc:DBTYPE://DBHOST:3306/DBNAME
 spring.datasource.username=DBUSER
@@ -8,7 +8,7 @@ spring.datasource.password=DBPW
 spring.datasource.driver-class-name=DBDRIVER
 spring.jpa.database-platform=DBPLATFORM
 spring.jpa.hibernate.ddl-auto=validate
-
+#
 # OpenAPI config
 springdoc.swagger-ui.enabled=false
 springdoc.api-docs.enabled=false
@@ -19,7 +19,7 @@ springdoc.pathsToMatch=/**
 springdoc.writer-with-order-by-keys=true
 springdoc.writer-with-default-pretty-printer=true
 springdoc.model-converters.pageable-converter.enabled=false
-
+#
 # Redis
 spring.redis.host=REDISHOST
 spring.redis.port=REDISPORT
@@ -29,19 +29,19 @@ spring.redis.jedis.pool.min-idle=REDISMINIDLE
 spring.redis.jedis.pool.max-active=REDISMAXACTIVE
 spring.redis.jedis.pool.max-wait=REDISMAXWAIT
 spring.redis.password=
-
+#
 # Service specific properties
-spoxx.flakkeeverhuizers.default-description=Default description
+#spoxx.flakkeeverhuizers.default-description=Default description
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
+#
 # Token
 # 30 days
-spring.token.expiration.time=2592000000
+spring.token.expiration.time=TOKENTIME
 # 15 days
-spring.refresh.token.expiration.time=1296000000
-spring.signing.key=mostdev99901!
-
+spring.refresh.token.expiration.time=TOKENREFRESHTIME
+spring.signing.key=TOKENKEY
+#
 logging.file.name= /app/spring.log
-
+#
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
