Add of db port in the config file

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
-# MySQL
-spring.datasource.url=jdbc:DBTYPE://localhost:3306/DBNAME
+# DB
+spring.datasource.url=jdbc:DBTYPE://localhost:DBPORT/DBNAME
 spring.jpa.hibernate.ddl-auto=validate
 #
 # OpenAPI config
