--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8080
 spring.application.name=template
 #
-# MySQL
-spring.datasource.url=jdbc:DBTYPE://DBHOST:3306/DBNAME
+# DB
+spring.datasource.url=jdbc:DBTYPE://DBHOST:DBPORT/DBNAME
 spring.datasource.username=DBUSER
 spring.datasource.password=DBPW
 spring.datasource.driver-class-name=DBDRIVER
