--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,8 @@ dependencies {
 	// Postgresql
 	implementation 'org.postgresql:postgresql:42.5.4'
 
+	implementation 'com.vladmihalcea:hibernate-types-52:1.0.0'
+
 	// Redis
 	implementation 'redis.clients:jedis:3.6.1'
 	implementation 'com.google.code.gson:gson:2.9.1'
