Add elasticsearch config

--- a/build.gradle
+++ b/build.gradle
@@ -53,14 +53,15 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 
-	// TODO addicionar as depedencias de bd como param tambem
 	// MySQL
 	implementation 'mysql:mysql-connector-java:8.0.28'
 
 	// Postgresql
 	implementation 'org.postgresql:postgresql:42.5.4'
-
 	implementation 'com.vladmihalcea:hibernate-types-52:1.0.0'
+
+	// Elasticsearch
+	implementation 'org.springframework.data:spring-data-elasticsearch'
 
 	// Redis
 	implementation 'redis.clients:jedis:3.6.1'
