--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,7 +6,13 @@ spring.jpa.hibernate.ddl-auto=validate
 springdoc.swagger-ui.enabled=true
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.docExpansion=list
-
+#
+# Redis
+spring.redis.host=localhost
+#
+# Elasticsearch
+spring.elasticsearch.uris=localhost:9200
+#
 # Service commands
 servicecommands.enabled=false
 servicecommands.k8sPodName=dev
