--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,6 +30,10 @@ spring.redis.jedis.pool.max-active=REDISMAXACTIVE
 spring.redis.jedis.pool.max-wait=REDISMAXWAIT
 spring.redis.password=
 #
+# Elasticsearch
+spring.elasticsearch.uris=ELASTICPATH:ELASTICPORT
+#
+#
 # Service specific properties
 #spoxx.flakkeeverhuizers.default-description=Default description
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
